# YSOS-oyyp

./: Cargo.toml  debug.sh  debug_script.sh  note.txt
pkg/app/counter/src/: main.rs
pkg/app/fab/: Cargo.toml
pkg/app/fab/src/: main.rs
pkg/app/fact/: Cargo.toml
pkg/app/fact/src/: main.rs
pkg/app/fork/: Cargo.toml
pkg/app/fork/src/: main.rs
pkg/app/hello/src/: main.rs
pkg/app/mq/: Cargo.toml
pkg/app/mq/src/: main.rs
pkg/app/sh/: Cargo.toml
pkg/app/sh/src/: biglogo.txt  main.rs  mylib.rs
pkg/app/test/: Cargo.toml
pkg/app/test/src/: main.rs
pkg/boot/: Cargo.toml
pkg/boot/.cargo/: config.toml
pkg/boot/src/: fs.rs  lib.rs  main.rs
pkg/elf/src/: lib.rs
pkg/kernel/: Cargo.toml
pkg/kernel/config/: boot.conf  x86_64-unknown-none.json
pkg/kernel/src/: lib.rs  main.rs
pkg/kernel/src/drivers/: filesystem.rs  input.rs  uart16550.rs
pkg/kernel/src/drivers/ata/: bus.rs  mod.rs
pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
pkg/kernel/src/interrupt/apic/: ioapic.rs  xapic.rs
pkg/kernel/src/interrupt/syscall/: mod.rs  (+1 more)
pkg/kernel/src/memory/: address.rs  allocator.rs  frames.rs  gdt.rs  mod.rs  user.rs
pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  sync.rs
pkg/kernel/src/utils/: logger.rs  macros.rs  mod.rs  regs.rs  resource.rs
pkg/lib/: Cargo.toml
pkg/lib/src/: allocator1.rs  io.rs  lib.rs  macros.rs  sync.rs  syscall.rs
pkg/lib/src/allocator/: brk.rs
pkg/storage/src/common/: error.rs
pkg/storage/src/partition/: mod.rs
pkg/syscall/src/: lib.rs
(+9 files in other folders)
